# SMPD

./: .gitignore  CMakeLists.txt  README.md  SMPD.cbp  SMPD.depend  SMPD.layout  build.sh  sonar-analysis.sh  sonar-build.sh  sonar-project.properties.no_token  sonarqube_info  wheres_the_catch.cpp
Catch_tests/: CMakeLists.txt  casing_test.cpp  classifiers_test.cpp  helpers_test.cpp  io_manager_test.cpp  selectors_test.cpp  statistical_test.cpp  unit_test.cpp
Catch_tests/src/classifiers/: nearest_mean.cpp  nearest_mean_test.cpp  nearest_neighbors_test.cpp
Catch_tests/src/command_line/: cla_parser_test.cpp
Catch_tests/src/data_builders/: csv_parser_test.cpp
Catch_tests/src/helpers/: collections_test.cpp  combinations_test.cpp  continuation_sequence_test.cpp  stringify_test.cpp  strings_test.cpp
Catch_tests/src/io_manager/: csv_reader.cpp
Catch_tests/src/main_program/: statistical_run_test.cpp
Catch_tests/src/matrix/: matrix_test.cpp
Catch_tests/src/selectors/: fisher_test.cpp
Catch_tests/src/statistics/: statistics_test.cpp
files/: Maple_Oak.csv  classes_unknowns_1  classes_vectors_1  classes_vectors_2  classes_vectors_3
src/: casing.cpp  casing.hpp  classifiers.cpp  classifiers.hpp  helpers.cpp  helpers.hpp  io_manager.cpp  io_manager.hpp  main.cpp  selectors.cpp  selectors.hpp  statistical.cpp  statistical.hpp
src/classifiers/: definitions.hpp  nearest_mean.cpp  nearest_mean.hpp  nearest_neighbors.cpp  nearest_neighbors.hpp
src/command_line/: cla_parser.cpp  cla_parser.hpp
src/data_builders/: classifiers_grouper.cpp  classifiers_grouper.hpp  csv_parser.cpp  csv_parser.hpp
src/helpers/: collections.cpp  collections.hpp  combinations.cpp  combinations.hpp  continuation_sequence.cpp  continuation_sequence.hpp  converters.cpp  converters.hpp  definitions.hpp  stringify.cpp  stringify.hpp  strings.cpp  strings.hpp
src/io_manager/: csv_reader.cpp  csv_reader.hpp  file_reader.cpp  file_reader.hpp
src/main_program/: statistical_run.cpp  statistical_run.hpp
src/matrix/: matrix.cpp  matrix.hpp
src/selectors/: definitions.hpp  fisher.cpp  fisher.hpp
src/statistics/: randoms.hpp  statistics.cpp  statistics.hpp
src/test/: constants.hpp
